Refactored Vehile and RentalStrategy. Updated some tests.